--- a/deploy/fib-service.yaml
+++ b/deploy/fib-service.yaml
@@ -6,6 +6,9 @@ spec:
   runLatest:
     configuration:
       revisionTemplate:
+        metadata:
+          annotations:
+            autoscaling.knative.dev/target: "10"
         spec:
           container:
             image: moficodes/fib-knative:v0
