--- a/03-build/kaniko.yaml
+++ b/03-build/kaniko.yaml
@@ -9,10 +9,9 @@ spec:
   - name: DOCKERFILE
     description: Path to the Dockerfile to build.
     default: /workspace/Dockerfile
-
   steps:
   - name: build-and-push
-    image: gcr.io/kaniko-project/executor
+    image: gcr.io/kaniko-project/executor:latest
     args:
     - --dockerfile=${DOCKERFILE}
     - --destination=${IMAGE}
