--- a/04-blue-green/02-config-v2.yaml
+++ b/04-blue-green/02-config-v2.yaml
@@ -1,16 +1,17 @@
-apiVersion: serving.knative.dev/v1alpha1
+apiVersion: serving.knative.dev/v1
 kind: Configuration
 metadata:
-  name: fib-knative-config-v2
-  namespace: default
+  name: fib-knative-config
 spec:
-  revisionTemplate:
-    metadata:
+  template:
+    metadata: 
       labels:
         knative.dev/type: container
       annotations:
         autoscaling.knative.dev/target: "10"
     spec:
-      container:
-        image: us.icr.io/mofi/fib-knative:build-2
-        imagePullPolicy: Always
+      containers:
+        - image: us.icr.io/mofi-cr/fib-knative:v2
+          env:
+            - name: version
+              value: v2
