--- a/04-blue-green/05-route-v1-50-v2-50.yaml
+++ b/04-blue-green/05-route-v1-50-v2-50.yaml
@@ -1,12 +1,11 @@
-apiVersion: serving.knative.dev/v1alpha1
+apiVersion: serving.knative.dev/v1
 kind: Route
 metadata:
-  name: fib-knative-route
-  namespace: default
+  name: fib-knative-route # Route name is unchanged, since we're updating an existing Route
 spec:
   traffic:
-  - configurationName: fib-knative-config-v1
-    percent: 50
-  - configurationName: fib-knative-config-v2
-    percent: 50
-    name: v2
+    - revisionName: fib-knative-config-rq25r
+      percent: 50 # All traffic still going to the first revision
+    - revisionName: fib-knative-config-plx42
+      percent: 50 # 0% of traffic routed to the second revision
+      tag: v2 # A named route
