--- a/04-blue-green/06-route-v1-0-v2-100.yaml
+++ b/04-blue-green/06-route-v1-0-v2-100.yaml
@@ -1,12 +1,11 @@
-apiVersion: serving.knative.dev/v1alpha1
+apiVersion: serving.knative.dev/v1
 kind: Route
 metadata:
-  name: fib-knative-route
-  namespace: default
+  name: fib-knative-route # Route name is unchanged, since we're updating an existing Route
 spec:
   traffic:
-  - configurationName: fib-knative-config-v1
-    percent: 0
-    name: v1
-  - configurationName: fib-knative-config-v2
-    percent: 100
+    - revisionName: fib-knative-config-rq25r
+      percent: 0 # All traffic still going to the first revision
+      tag: v1
+    - revisionName: fib-knative-config-plx42
+      percent: 100 # 0% of traffic routed to the second revision
